# underwaterROS

./: CMakeLists.txt  README.md  auv_full.launch  controller_node.py  finetune_qwen.py  nlp_node.py  package.xml  visual_node.py
